# dissertai

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
backend/: tarefas.db
backend_api/: .gitignore  database.py  main.py
frontend/: app.py  utils.py
