[project]
name = "dissertai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "moviepy>=2.1.1",
    "openai>=1.59.3",
    "python-multipart>=0.0.20",
    "sqlalchemy==2.0.36",
    "uvicorn>=0.34.0",
]
